--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="text-muted" style="text-align:center;">{{ site.data.global.footer_text }}</p>
+                    <p style="text-align:center">You can find us on:
+                        <a href="mailto:hamilton@hackinghealth.ca">Email</a>,
+                        <a href="https://www.meetup.com/Hacking-Health-Hamilton/">Meetup</a>,
+                        <a href="https://www.facebook.com/HackingHealthHamilton/">Facebook</a>,
+                        and <a href="https://twitter.com/HHHamOnt">@HHHamOnt on Twitter</a>
+                    </p>
                 </div>
             </div>
         </div>
