1. Add april11Meetup Newsletter. 2. Add youtube hyperlink in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
                         <a href="mailto:hamilton@hackinghealth.ca">Email</a>,
                         <a href="https://www.meetup.com/Hacking-Health-Hamilton/">Meetup</a>,
                         <a href="https://www.facebook.com/HackingHealthHamilton/">Facebook</a>,
+						<a href="https://www.youtube.com/channel/UCz1ZhfsHdMraf_RR_NOcSSQ">YouTube</a>,
                         and <a href="https://twitter.com/HHHamOnt">@HHHamOnt on Twitter</a>
                     </p>
                 </div>
