--- a/_includes/title-group.html
+++ b/_includes/title-group.html
@@ -44,12 +44,13 @@
     <!-- add timer ui-->
     <div class = "timecountdown">
         <h2> <a href="https://www.eventbrite.ca/e/hacking-health-hamilton-hackathon-2019-tickets-60104994657"> Health Hackathon 2019 @ Nov.8-10, 2019 </a></h2>
+        <body onload ="timer()"></body>
         <div id = "timer"></div>
    </div>
 
 </div>
 
-<!-- add timer ui--@begin-->
+<!-- add timer ui @begin-->
 <style type= "text/css">
     .timecountdown h2
     { 
@@ -69,4 +70,4 @@
 </style>
 
 <script type = "text/javascript" src = "timer.js"></script>
-<!-- add timer ui--@end-->
+<!-- add timer ui @end-->
